[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuclei-rest-sdk"
version = "0.1.0"
description = "Community-maintained Python SDK for the ProjectDiscovery Nuclei vulnerability scanner"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "S3 Infosoft" },
]
keywords = [
    "nuclei",
    "projectdiscovery",
    "security",
    "scanner",
    "vulnerability",
    "vulnerability-scanner",
    "nuclei-rest-sdk",
    "dast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/S3Infosoft/nuclei-sdk"
Repository = "https://github.com/S3Infosoft/nuclei-sdk"
Documentation = "https://github.com/S3Infosoft/nuclei-sdk#readme"
Issues = "https://github.com/S3Infosoft/nuclei-sdk/issues"

[project.scripts]
nuclei-rest-sdk = "nuclei_rest_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nuclei_rest_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"src/nuclei_rest_sdk/py.typed" = "nuclei_rest_sdk/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["nuclei_rest_sdk"]
mypy_path = "src"
